# LanesDetectionFromThePerspectiveImage

./: CMakeLists.txt  README.md
include/: fileutil.h  main.h  portable-file-dialogs.h
src/: fileutil.cpp  main.cpp
src/LaneDetection/: LaneDetection.cpp  LaneDetection.h
src/MorphologicalImages/: Lab7.cpp  Lab7.h
src/StatisticalPropertiesGrayscaleImages/: Lab8.cpp  Lab8.h
